# project-work

./: .gitignore  README.md  evaluate.py  instance_gen.py  problem_base.py  pyproject.toml  requirements.txt  run_beta_regimes.py  run_experiment.py  s337517.py  s343585.py  strategy.py
experiments/: __init__.py  benchmark.py  configs.py  instance_generator.py  run_all_experiments.py  run_evaluation.py  run_genetic_comparison.py  run_quick_test.py  run_regime_comparison.py  run_scalability_test.py  run_single_test.py
hierarchical_gold/: __init__.py  factory.py  ga.py  gold_problem_adapter.py  linker.py  partial.py  partition.py  prins.py  refinement.py  remove_bulk.py  return_optimizer.py  simulator.py  solver.py
report/: report.tex
src/: __init__.py  algorithm.py
src/gold_collection/: __init__.py
src/gold_collection/core/: __init__.py  evaluator.py  problem.py  solution.py
src/gold_collection/distance/: __init__.py  oracle.py
src/gold_collection/solvers/: __init__.py  adaptive_solver.py
src/gold_collection/solvers/genetic/: __init__.py  operators.py  refinement.py  split.py  tour_solver.py
src/gold_collection/solvers/heuristics/: __init__.py  constructive.py  local_search.py
tests/: __init__.py  test_entrypoint.py
